# azure-blob-manager

./: LICENSE  README.md  setup.cfg  setup.py
src/az/blob/: manager.py
