[metadata]
name = azure_blob_manager
version = 0.0.1
author = jonny nguyen
author_email = jonny_nguyen@outlook.com
description = Python wrapper for Microsoft azure-storage-blob library
url = https://github.com/jnguyen0220/azure-blob-manager

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    azure-storage-blob
[options.packages.find]
where = src